--- a/contact.html
+++ b/contact.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- SEO Meta Tags for Contact Page -->
-<meta name="title" content="Contact Zhev Education – Study Abroad Consultancy India">
-<meta name="description" content="Get in touch with Zhev Education for study abroad counselling, admissions support, visa guidance, and university selection assistance.">
-<meta name="keywords" content="contact Zhev Education, study abroad help, education consultancy contact, student visa help, overseas education support">
-<meta name="author" content="Zhev Education Consultancy">
+  <link rel="canonical" href="https://zheveducation.com/contact.html">
+  <meta name="google-site-verification" content="UDWz14iODOz9mqHBeFAhVdkxtOlqV3TghXXDoQKZwv4" />
 
-<!-- Open Graph -->
-<meta property="og:title" content="Contact Zhev Education – Study Abroad Consultancy">
-<meta property="og:description" content="Reach out to our expert counsellors for study abroad queries and support.">
-<meta property="og:type" content="website">
+  <title>Contact Zhev Education – Study Abroad Consultancy India</title>
+  <meta name="description" content="Contact Zhev Education for study abroad counselling, admissions support, visa guidance, SOP/LOR help and scholarship research for USA, UK, Canada and Australia.">
+  <meta name="keywords" content="contact Zhev Education, study abroad help, education consultancy contact, student visa help, apply for study abroad, SOP writing service">
+  <meta name="author" content="Zhev Education Consultancy">
 
-<!-- Twitter -->
-<meta name="twitter:title" content="Contact Zhev Education – Study Abroad Consultancy">
-<meta name="twitter:description" content="Contact Zhev Education for guidance on admissions, visas, SOP/LOR, and study abroad services.">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Contact Zhev Education – Study Abroad Consultancy">
+  <meta property="og:description" content="Get in touch for personalised study abroad counselling for USA, UK, Canada and Australia.">
+  <meta property="og:url" content="https://zheveducation.com/contact.html">
+  <meta property="og:image" content="https://contactus328-ai.github.io/zheveducation/assets/og-image.png">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Contact Zhev Education – Study Abroad Consultancy">
+  <meta name="twitter:description" content="Reach out for application, visa and scholarship support for higher education abroad.">
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact Us</title>
   <link rel="stylesheet" href="assets/style.css" />
+  <title>Contact Us</title>
 </head>
 <body>
   <header>
@@ -34,9 +38,40 @@
 
   <section>
     <h2>Get in Touch</h2>
-    <p>Email: info@zheveducation.com</p>
-    <p>Phone: +91 95945 38979</p>
-    <p>Location: Mumbai, India</p>
+    <p>
+      We'd love to speak with you about study abroad options. Whether you're looking for MS in Computer Science,
+      MBA options, Data Science masters or healthcare programs, our counsellors can provide a free initial consultation.
+      Contact us to schedule a one-on-one call, request a personalised university shortlist, or get help with SOP and visa filing.
+    </p>
+
+    <h3>Contact Details</h3>
+    <p>Email: <a href="mailto:info@zheveducation.com">info@zheveducation.com</a></p>
+    <p>Phone: +91 99672 00345</p>
+    <p>Address: Mumbai, Maharashtra, India</p>
+
+    <h3>Request a Callback</h3>
+    <p>
+      Fill out a short form (or email us) with your course of interest, desired country, current qualifications,
+      and preferred start date. We will return a detailed plan and next steps within 48 hours.
+    </p>
+  </section>
+
+  <section>
+    <h2>Testimonials</h2>
+    <div class="grid">
+      <div class="card">
+        <strong>Anjali T.</strong>
+        <p>"Quick response and clear plan — helped me apply to top universities."</p>
+      </div>
+      <div class="card">
+        <strong>Karan M.</strong>
+        <p>"Professional and transparent process from shortlisting to visa."</p>
+      </div>
+      <div class="card">
+        <strong>Riya S.</strong>
+        <p>"Excellent follow up and scholarship guidance."</p>
+      </div>
+    </div>
   </section>
 
   <footer>
