--- a/index.html
+++ b/index.html
@@ -1,98 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-  <script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "EducationalOrganization",
-  "name": "Zhev Education Abroad Consultancy",
-  "url": "https://zheveducation.com",
-  "logo": "https://contactus328-ai.github.io/zheveducation/assets/og-image.png",
-  "description": "Zhev Education helps students study abroad in USA, UK, Canada, Ireland, Australia & New Zealand with services including university shortlisting, SOP/LOR drafting, application filing, and visa guidance.",
-  "email": "info@zheveducation.com",
-  "telephone": "+91-9967200345",
-  "address": {
-    "@type": "PostalAddress",
-    "addressLocality": "Mumbai",
-    "addressRegion": "Maharashtra",
-    "addressCountry": "IN"
-  },
-  "sameAs": [
-    "https://www.facebook.com/",
-    "https://www.instagram.com/",
-    "https://www.linkedin.com/"
-  ],
-  "serviceArea": {
-    "@type": "Country",
-    "name": "India"
-  },
-  "knowsAbout": [
-    "Study Abroad",
-    "Study in USA",
-    "Study in UK",
-    "Study in Canada",
-    "Study in Ireland",
-    "Study in Australia",
-    "MS in Computer Science",
-    "MBA Abroad",
-    "Data Science Courses Abroad",
-    "Student Visa Assistance",
-    "SOP Writing",
-    "LOR Writing"
-  ],
-  "makesOffer": [
-    {
-      "@type": "Offer",
-      "name": "University Shortlisting",
-      "description": "Personalised university recommendations for USA, UK, Canada, Ireland, Australia."
-    },
-    {
-      "@type": "Offer",
-      "name": "SOP & LOR Drafting",
-      "description": "Professional writing and editing for SOPs, LORs and student resumes."
-    },
-    {
-      "@type": "Offer",
-      "name": "Visa Assistance",
-      "description": "Guidance on student visa filing, documentation and interview preparation."
-    },
-    {
-      "@type": "Offer",
-      "name": "Application Filing",
-      "description": "Full support for submitting applications to top universities."
-    }
-  ],
-  "review": [
-    {
-      "@type": "Review",
-      "author": "Rohit K",
-      "reviewBody": "Zhev Education helped me get admitted to three top MS in CS programs.",
-      "reviewRating": {
-        "@type": "Rating",
-        "ratingValue": "5"
-      }
-    },
-    {
-      "@type": "Review",
-      "author": "Pooja M",
-      "reviewBody": "Professional team. Great SOP and visa support.",
-      "reviewRating": {
-        "@type": "Rating",
-        "ratingValue": "5"
-      }
-    },
-    {
-      "@type": "Review",
-      "author": "Arjun S",
-      "reviewBody": "Excellent data science guidance and scholarship support.",
-      "reviewRating": {
-        "@type": "Rating",
-        "ratingValue": "5"
-      }
-    }
-  ]
-}
-</script>
 <head>
+  <!-- JSON-LD structured data (must be inside <head>) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "EducationalOrganization",
+    "name": "Zhev Education Abroad Consultancy",
+    "url": "https://zheveducation.com",
+    "logo": "https://contactus328-ai.github.io/zheveducation/assets/og-image.png",
+    "description": "Zhev Education helps students study abroad in USA, UK, Canada, Ireland, Australia & New Zealand with services including university shortlisting, SOP/LOR drafting, application filing, and visa guidance.",
+    "email": "info@zheveducation.com",
+    "telephone": "+91-9967200345",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Mumbai",
+      "addressRegion": "Maharashtra",
+      "addressCountry": "IN"
+    },
+    "sameAs": [
+      "https://www.facebook.com/",
+      "https://www.instagram.com/",
+      "https://www.linkedin.com/"
+    ],
+    "serviceArea": {
+      "@type": "Country",
+      "name": "India"
+    },
+    "knowsAbout": [
+      "Study Abroad",
+      "Study in USA",
+      "Study in UK",
+      "Study in Canada",
+      "Study in Ireland",
+      "Study in Australia",
+      "MS in Computer Science",
+      "MBA Abroad",
+      "Data Science Courses Abroad",
+      "Student Visa Assistance",
+      "SOP Writing",
+      "LOR Writing"
+    ],
+    "makesOffer": [
+      {
+        "@type": "Offer",
+        "name": "University Shortlisting",
+        "description": "Personalised university recommendations for USA, UK, Canada, Ireland, Australia."
+      },
+      {
+        "@type": "Offer",
+        "name": "SOP & LOR Drafting",
+        "description": "Professional writing and editing for SOPs, LORs and student resumes."
+      },
+      {
+        "@type": "Offer",
+        "name": "Visa Assistance",
+        "description": "Guidance on student visa filing, documentation and interview preparation."
+      },
+      {
+        "@type": "Offer",
+        "name": "Application Filing",
+        "description": "Full support for submitting applications to top universities."
+      }
+    ],
+    "review": [
+      {
+        "@type": "Review",
+        "author": "Rohit K",
+        "reviewBody": "Zhev Education helped me get admitted to three top MS in CS programs.",
+        "reviewRating": {
+          "@type": "Rating",
+          "ratingValue": "5"
+        }
+      },
+      {
+        "@type": "Review",
+        "author": "Pooja M",
+        "reviewBody": "Professional team. Great SOP and visa support.",
+        "reviewRating": {
+          "@type": "Rating",
+          "ratingValue": "5"
+        }
+      },
+      {
+        "@type": "Review",
+        "author": "Arjun S",
+        "reviewBody": "Excellent data science guidance and scholarship support.",
+        "reviewRating": {
+          "@type": "Rating",
+          "ratingValue": "5"
+        }
+      }
+    ]
+  }
+  </script>
+
   <link rel="canonical" href="https://zheveducation.com/">
   <meta name="google-site-verification" content="UDWz14iODOz9mqHBeFAhVdkxtOlqV3TghXXDoQKZwv4" />
 
@@ -118,7 +120,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="assets/style.css" />
-  <title>Zhev Education Abroad | Home</title>
 </head>
 <body>
   <header>
