--- a/about.html
+++ b/about.html
@@ -1,30 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+  <!-- JSON-LD Structured Data for About Page -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "EducationalOrganization",
+    "name": "Zhev Education Abroad Consultancy",
+    "url": "https://zheveducation.com/about.html",
+    "description": "Zhev Education is a trusted study abroad consultancy offering personalised counselling, admissions support, SOP/LOR drafting, visa guidance and university selection for students applying to USA, UK, Canada, Ireland, Australia and New Zealand.",
+    "founder": {
+      "@type": "Person",
+      "name": "Zhev Education Team"
+    },
+    "areaServed": "IN",
+    "knowsAbout": [
+      "study abroad consultants",
+      "study abroad guidance",
+      "study in USA",
+      "study in UK",
+      "study in Canada",
+      "study in Ireland",
+      "MS in Computer Science",
+      "MBA abroad",
+      "Data Science programs abroad",
+      "education consultancy India"
+    ],
+    "review": [
+      {
+        "@type": "Review",
+        "author": "Neha R",
+        "reviewBody": "Detailed guidance and clear timelines. I received an admission offer from my top choice university.",
+        "reviewRating": { "@type": "Rating", "ratingValue": "5" }
+      },
+      {
+        "@type": "Review",
+        "author": "Vikram P",
+        "reviewBody": "My SOP and visa interview prep were handled exceptionally well. Highly recommended.",
+        "reviewRating": { "@type": "Rating", "ratingValue": "5" }
+      },
+      {
+        "@type": "Review",
+        "author": "Shweta L",
+        "reviewBody": "Excellent coordination for documents and pre-departure support.",
+        "reviewRating": { "@type": "Rating", "ratingValue": "5" }
+      }
+    ]
+  }
+  </script>
+
   <link rel="canonical" href="https://zheveducation.com/about.html">
   <meta name="google-site-verification" content="UDWz14iODOz9mqHBeFAhVdkxtOlqV3TghXXDoQKZwv4" />
 
-  <title>About Zhev Education – Study Abroad Consultancy India</title>
-  <meta name="description" content="About Zhev Education: experienced study abroad consultants in India offering admissions, visa support, SOP/LOR services and personalised university shortlists for USA, UK, Canada and Australia.">
-  <meta name="keywords" content="about Zhev Education, study abroad consultants India, study in USA, study in UK, study in Canada, education consultancy, international student services">
+  <!-- SEO Meta Tags -->
+  <title>About Zhev Education – Best Study Abroad Consultancy India</title>
+  <meta name="description" content="Learn about Zhev Education, one of India’s most trusted study abroad consultancies helping students with admissions, SOP/LOR, visas, and university shortlisting for USA, UK, Canada, Ireland and Australia.">
+  <meta name="keywords" content="about Zhev Education, study abroad consultants, overseas education consultants, study abroad India, study in USA, study in UK, MS in CS guidance, best study abroad consultants, international education consultancy">
   <meta name="author" content="Zhev Education Consultancy">
 
+  <!-- Open Graph Tags -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="About Zhev Education – Study Abroad Consultancy India">
-  <meta property="og:description" content="Zhev Education is a trusted education consultancy guiding students to top universities in USA, UK, Canada, Ireland and Australia.">
+  <meta property="og:description" content="We help students study abroad through personalised counselling, applications, SOP/LOR drafting, and visa filing support.">
   <meta property="og:url" content="https://zheveducation.com/about.html">
   <meta property="og:image" content="https://contactus328-ai.github.io/zheveducation/assets/og-image.png">
 
+  <!-- Twitter Cards -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="About Zhev Education – Study Abroad Consultancy India">
-  <meta name="twitter:description" content="Learn about our team, experience and approach to international admissions and visas.">
+  <meta name="twitter:title" content="About Zhev Education – Trusted Study Abroad Consultants India">
+  <meta name="twitter:description" content="Expert study abroad guidance for students applying to USA, UK, Canada, Australia and Ireland.">
+  <meta name="twitter:image" content="https://contactus328-ai.github.io/zheveducation/assets/og-image.png">
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="assets/style.css" />
-  <title>About Us</title>
 </head>
+
 <body>
+
   <header>
     <h1>About Zhev Education</h1>
     <nav>
@@ -37,30 +91,46 @@
   </header>
 
   <section>
-    <h2>Our Mission & Experience</h2>
+    <h2>Who We Are</h2>
     <p>
-      Zhev Education was founded to simplify the complex process of studying abroad for Indian students.
-      Our mission is to provide transparent, practical guidance for admissions to top ranked programs —
-      including MS in Computer Science, MBA programs, Data Science masters, and healthcare degrees.
-      Our consultants have industry experience in university admissions, test preparation strategies and visa
-      procedures. We curate personalised university shortlists for the USA, UK, Canada, Ireland, Australia and
-      New Zealand with a focus on outcomes — scholarship chances, employability, and post-study work pathways.
+      Zhev Education is a leading study abroad consultancy helping students across India secure admissions to 
+      top-ranked universities worldwide. With deep expertise in international education systems, our counsellors 
+      guide students through every step of their journey – from university shortlisting to application submission, 
+      SOP & LOR drafting, interview preparation, visa filing and pre-departure support.
     </p>
-
-    <h2>Our Approach</h2>
     <p>
-      We use a step-by-step process: eligibility assessment, program matching, application calendar,
-      document preparation (SOP/LOR/resume), scholarship research, and visa interview coaching.
-      For program specific help like MS in CS or Data Science, we provide targeted SOP revisions and
-      technical resume alignment that highlights projects, internships and publications.
+      Over the years, we have helped hundreds of students successfully pursue programs in fields such as Computer Science, 
+      Data Science, Engineering, Business, Healthcare, Architecture, Design and more. Whether it is MS in Computer Science 
+      in the USA, MBA in the UK, Data Science programs in Canada, or high-value courses in Ireland and Australia, 
+      we provide customised guidance based on academic background, finances, and long-term goals.
     </p>
+  </section>
 
-    <h2>Team & Credentials</h2>
+  <section>
+    <h2>Our Mission</h2>
     <p>
-      Our team includes former admission officers, test prep specialists and visa consultants. We maintain
-      direct relationships with partner universities for timely updates on cutoffs, scholarships and intake
-      options. We also support education loan assistance and pre-departure briefings so students travel
-      prepared and confident.
+      Our mission is to simplify studying abroad for Indian students. The global admissions process can feel confusing – 
+      varying deadlines, SOP requirements, eligibility criteria, scholarship options and visa procedures. 
+      Our goal is to make this journey structured, stress-free and successful by providing clear, end-to-end guidance.
+    </p>
+    <p>
+      We believe in ethical counselling, transparency and accuracy. Every university recommendation and document review 
+      is personalised to ensure the highest acceptance chances. Students receive complete support irrespective of their 
+      destination – USA, UK, Canada, Ireland, Australia or New Zealand.
+    </p>
+  </section>
+
+  <section>
+    <h2>How We Help Students Succeed</h2>
+    <p>
+      Our counselors conduct detailed profile evaluations, identify strengths, suggest improvements, and create 
+      customised application plans. For competitive programs like MS in CS, Data Science, AI/ML, Cybersecurity, 
+      Engineering and MBA, we focus on crafting strong SOPs, achievements and technical resumes that highlight 
+      projects, internships, academic research and professional experience.
+    </p>
+    <p>
+      Visa officers evaluate intent, financial stability and clarity of academic plan. Our mock interviews and 
+      documentation checks help students confidently clear F1 (USA), SDS (Canada), Tier-4 (UK), and other visa processes.
     </p>
   </section>
 
@@ -73,11 +143,11 @@
       </div>
       <div class="card">
         <strong>Vikram P.</strong>
-        <p>"SOP and interview prep helped me secure a scholarship. Highly professional team."</p>
+        <p>"Their SOP and visa prep support was spot on and helped me secure a scholarship."</p>
       </div>
       <div class="card">
         <strong>Shweta L.</strong>
-        <p>"Great support with visa documents and pre-departure checklist."</p>
+        <p>"Excellent coordination, document review and pre-departure support. Highly professional team."</p>
       </div>
     </div>
   </section>
@@ -85,5 +155,6 @@
   <footer>
     <p>© 2025 Zhev Education Abroad Consultancy</p>
   </footer>
+
 </body>
 </html>
