--- a/services.html
+++ b/services.html
@@ -1,30 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+  <!-- JSON-LD Structured Data for Services Page -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Service",
+    "name": "Study Abroad Services – Zhev Education",
+    "provider": {
+      "@type": "EducationalOrganization",
+      "name": "Zhev Education Abroad Consultancy",
+      "url": "https://zheveducation.com/services.html"
+    },
+    "serviceType": [
+      "University Shortlisting",
+      "Application Filing",
+      "SOP Writing",
+      "LOR Assistance",
+      "Student Visa Assistance",
+      "Scholarship Guidance",
+      "Education Loan Support",
+      "Pre-Departure Support"
+    ],
+    "areaServed": "India",
+    "description": "Comprehensive study abroad services including university shortlisting, SOP/LOR writing, application submission, scholarship research, and visa guidance for USA, UK, Canada, Ireland and Australia.",
+    "offers": [
+      {
+        "@type": "Offer",
+        "name": "University Shortlisting",
+        "description": "Personalised recommendation of universities based on academic profile, budget and career goals."
+      },
+      {
+        "@type": "Offer",
+        "name": "SOP & LOR Writing",
+        "description": "Professional drafting and editing of SOPs and LORs tailored to program requirements."
+      },
+      {
+        "@type": "Offer",
+        "name": "Visa Filing Support",
+        "description": "Assistance with VISA document preparation, mock interviews and filing."
+      },
+      {
+        "@type": "Offer",
+        "name": "Application Filing",
+        "description": "Full support for admission applications to universities abroad."
+      }
+    ],
+    "review": [
+      {
+        "@type": "Review",
+        "author": "Devansh R",
+        "reviewBody": "Their guidance for MS in CS applications helped me get an admit with scholarship.",
+        "reviewRating": { "@type": "Rating", "ratingValue": "5" }
+      },
+      {
+        "@type": "Review",
+        "author": "Meera S",
+        "reviewBody": "Visa preparation was detailed and extremely helpful.",
+        "reviewRating": { "@type": "Rating", "ratingValue": "5" }
+      },
+      {
+        "@type": "Review",
+        "author": "Samir A",
+        "reviewBody": "Excellent loan and scholarship assistance.",
+        "reviewRating": { "@type": "Rating", "ratingValue": "5" }
+      }
+    ]
+  }
+  </script>
+
   <link rel="canonical" href="https://zheveducation.com/services.html">
   <meta name="google-site-verification" content="UDWz14iODOz9mqHBeFAhVdkxtOlqV3TghXXDoQKZwv4" />
 
-  <title>Study Abroad Services – University Applications, SOP, Visa | Zhev Education</title>
-  <meta name="description" content="Comprehensive study abroad services: university shortlisting, SOP & LOR drafting, application filing, scholarship research, visa assistance and loan support for USA, UK, Canada, Ireland, Australia.">
-  <meta name="keywords" content="study abroad services, university shortlisting, SOP writing, LOR assistance, student visa consultancy, scholarship research, education loan assistance, MS in CS services">
+  <!-- SEO Meta Tags -->
+  <title>Study Abroad Services | Applications, SOP, Visa, Scholarships | Zhev Education</title>
+  <meta name="description" content="Zhev Education offers complete study abroad services including university shortlisting, SOP/LOR writing, application filing, scholarship research, visa guidance and pre-departure support.">
+  <meta name="keywords" content="study abroad services, SOP writing service, LOR drafting, student visa assistance, university shortlisting, education consultants India, MS in CS guidance, scholarship help">
   <meta name="author" content="Zhev Education Consultancy">
 
+  <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Study Abroad Services – Zhev Education">
-  <meta property="og:description" content="University shortlisting, SOP/LOR writing, visa support and application filing for international students.">
+  <meta property="og:description" content="Full support for university shortlisting, SOP/LOR writing, application submission and visa assistance.">
   <meta property="og:url" content="https://zheveducation.com/services.html">
   <meta property="og:image" content="https://contactus328-ai.github.io/zheveducation/assets/og-image.png">
 
+  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Study Abroad Services – Zhev Education">
-  <meta name="twitter:description" content="Complete support for admissions, visas, scholarships and pre-departure logistics.">
+  <meta name="twitter:description" content="Comprehensive admissions, visa and scholarship services for studying abroad.">
+  <meta name="twitter:image" content="https://contactus328-ai.github.io/zheveducation/assets/og-image.png">
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="assets/style.css" />
-  <title>Our Services</title>
+
 </head>
+
 <body>
+
   <header>
     <h1>Our Services</h1>
     <nav>
@@ -37,52 +112,77 @@
   </header>
 
   <section>
-    <h2>Comprehensive Application Support</h2>
+    <h2>Complete Study Abroad Support</h2>
     <p>
-      Zhev Education offers end-to-end services for students planning to study abroad. Our application
-      support covers university shortlisting (targeting top ranked CS, engineering and management programs),
-      personalised admission strategies, application form filling, deadline tracking and document uploads.
-      We help students prepare for competitive programs like MS in Computer Science, MS in Data Science,
-      MBA, and other masters and bachelor programs abroad.
+      At Zhev Education, we provide end-to-end support for students aspiring to study abroad. Our services 
+      are designed to simplify the application journey—from choosing the right universities to preparing 
+      strong applications and completing visa documentation. We specialise in helping students pursue 
+      programs such as MS in Computer Science, Data Science, Engineering, MBA, Healthcare, Architecture, 
+      Design and many more in USA, UK, Canada, Ireland, Australia and New Zealand.
+    </p>
+    <p>
+      Our counsellors analyse your academic profile, goals and financial plan to create customised pathways 
+      that increase your chances of admission and scholarships. Whether you're applying for MS in CS, MBA, 
+      Engineering, Nursing or any specialized program, our strategic guidance ensures your application 
+      stands out in competitive admissions cycles.
+    </p>
+  </section>
+
+  <section>
+    <h2>Our Core Services</h2>
+    <h3>1. University Shortlisting</h3>
+    <p>
+      We evaluate your profile, preferences, and career aspirations to suggest universities that match 
+      your goals. For technical courses such as Computer Science, Data Science, AI/ML, Cybersecurity and 
+      Engineering, we recommend programs with strong labs, research output, internship opportunities and 
+      industry tie-ups. For MBA and Management programs, we focus on ROI, placements and global rankings.
     </p>
 
-    <h3>SOP, LOR & Resume Services</h3>
+    <h3>2. SOP & LOR Drafting</h3>
     <p>
-      Our SOP (Statement of Purpose) service includes multiple drafts, targeted edits for program intent,
-      and industry-aligned language that highlights projects, internships and research. We coordinate LOR
-      collection guidelines with recommenders and help craft resumes that match international admissions
-      expectations (technical resumes for CS applicants, project portfolios for design & architecture).
+      Our expert writers prepare SOPs that highlight your strengths, academic achievements, technical 
+      projects, internships and motivations. We craft LORs that align with university expectations and 
+      enhance the credibility of your application. Every document undergoes multiple revisions to ensure 
+      quality, clarity and uniqueness.
     </p>
 
-    <h3>Scholarships & Education Loans</h3>
+    <h3>3. Application Filing & Document Support</h3>
     <p>
-      We research university scholarships, country-level scholarships and external grants relevant to each
-      student profile. We also guide students through education loan documentation and lender selection,
-      including loan options with or without collateral where available.
+      We take care of application form filling, essay reviews, resume structuring, document uploads, 
+      transcript formatting, deadline tracking and portal submissions. Students receive full guidance on 
+      courier documents, WES evaluations and financial documentation.
     </p>
 
-    <h3>Visa Assistance & Interview Prep</h3>
+    <h3>4. Scholarship & Loan Assistance</h3>
     <p>
-      Visa filing support includes document checks, mock interviews, and guidance on country-specific
-      visa policies (F1 for USA, Study Visa for UK, Student Direct Stream for Canada). We prepare students
-      for likely interview questions and compile evidence packages for visa officers.
+      We help students find university-funded scholarships, government scholarships, partial tuition 
+      waivers, assistantships and external funding options. For education loans, we support students in 
+      understanding eligibility criteria and connecting with lenders offering collateral and non-collateral 
+      loans.
     </p>
 
-    <h3>Pre-Departure & Post-Arrival Support</h3>
+    <h3>5. Visa Filing & Interview Preparation</h3>
     <p>
-      Pre-departure briefings include accommodation guidance, health insurance advice, packing checklists,
-      and orientation on banking & local transport. Post-arrival help covers bank account setup, local SIM,
-      and initial orientations with partner universities where possible.
+      Our visa support includes compiling forms, checking financial proofs, preparing travel history 
+      documentation and conducting detailed mock interviews. We coach students for USA F1 visa interviews, 
+      UK Student Visa SOPs, Canada SDS documentation and Australia GTE requirements.
+    </p>
+
+    <h3>6. Pre-Departure & Post-Arrival Support</h3>
+    <p>
+      We guide students on accommodation, health insurance, forex, SIM cards, travel plans, packing lists 
+      and local transportation. Post-arrival support includes orientation on survival skills, tax ID 
+      applications, bank accounts and university onboarding.
     </p>
   </section>
 
   <section>
     <h2>Service Packages</h2>
     <ul>
-      <li><strong>Apply Smart:</strong> University shortlisting + SOP review + application checks</li>
-      <li><strong>Apply Complete:</strong> Full application filing + LOR coordination + scholarship search</li>
-      <li><strong>Visa Secure:</strong> Document package + mock interviews + visa filing checklist</li>
-      <li><strong>All-Inclusive:</strong> End-to-end service including loans, pre-departure & post-arrival support</li>
+      <li><strong>Apply Smart:</strong> Shortlisting + SOP Review + Application Check</li>
+      <li><strong>Apply Complete:</strong> Full Filing + LOR + Scholarships</li>
+      <li><strong>Visa Secure:</strong> Visa Documents + Mock Interviews</li>
+      <li><strong>All-Inclusive:</strong> Complete end-to-end admissions + visa + pre-departure</li>
     </ul>
   </section>
 
@@ -91,15 +191,15 @@
     <div class="grid">
       <div class="card">
         <strong>Devansh R.</strong>
-        <p>"Their SOP team helped me craft an application for MS in CS and I secured admission with scholarship."</p>
+        <p>"Their SOP team helped me craft a strong MS in CS application. I got a scholarship too."</p>
       </div>
       <div class="card">
         <strong>Meera S.</strong>
-        <p>"Complete visa prep and mock interviews made the process stress free."</p>
+        <p>"Visa preparation and mock interviews gave me full confidence. Great experience."</p>
       </div>
       <div class="card">
         <strong>Samir A.</strong>
-        <p>"Detailed guidance on loan documentation and scholarship options."</p>
+        <p>"Detailed guidance on loan documentation and scholarships. Very helpful team."</p>
       </div>
     </div>
   </section>
@@ -107,5 +207,6 @@
   <footer>
     <p>© 2025 Zhev Education Abroad Consultancy</p>
   </footer>
+
 </body>
 </html>
