--- a/countries.html
+++ b/countries.html
@@ -1,100 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+  <!-- JSON-LD Structured Data for Countries Page -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "EducationalOrganization",
+    "name": "Zhev Education Abroad Consultancy – Study Destinations",
+    "url": "https://zheveducation.com/countries.html",
+    "description": "Study abroad guidance for USA, UK, Canada, Australia, Ireland, Europe, and Middle East. Programs include MS in CS, MBA, MBBS, hospitality, fashion design, sports, music, architecture, game design and more.",
+    "areaServed": [
+      "USA",
+      "Canada",
+      "UK",
+      "Ireland",
+      "Australia",
+      "New Zealand",
+      "Germany",
+      "France",
+      "Italy",
+      "Netherlands",
+      "Sweden",
+      "Finland",
+      "Spain",
+      "UAE",
+      "Qatar",
+      "Saudi Arabia"
+    ],
+    "knowsAbout": [
+      "Study in Europe",
+      "Study in Middle East",
+      "Offbeat study programs abroad",
+      "MBBS abroad",
+      "Dentistry abroad",
+      "Hotel Management",
+      "Sports science",
+      "Fashion design",
+      "Music production",
+      "Game design courses",
+      "Architecture degrees",
+      "Culinary arts abroad",
+      "Hair styling courses abroad",
+      "Film and media degrees"
+    ]
+  }
+  </script>
+
   <link rel="canonical" href="https://zheveducation.com/countries.html">
   <meta name="google-site-verification" content="UDWz14iODOz9mqHBeFAhVdkxtOlqV3TghXXDoQKZwv4" />
 
-  <title>Top Study Destinations – USA, UK, Canada, Ireland, Australia | Zhev Education</title>
-  <meta name="description" content="Explore top study destinations (USA, UK, Canada, Ireland, Australia, New Zealand) with Zhev Education. Get program guidance for MS in CS, MBA, Data Science and scholarships.">
-  <meta name="keywords" content="study in USA, study in UK, study in Canada, study in Ireland, study in Australia, top destinations for international students, MS in CS USA, MBA UK">
-  <meta name="author" content="Zhev Education Consultancy">
+  <!-- SEO Meta Tags -->
+  <title>Top Study Destinations – USA, Canada, UK, Europe, Middle East | Zhev Education</title>
+  <meta name="description" content="Explore top study destinations such as USA, Canada, UK, Ireland, Australia, Europe (Germany, France, Italy), and the Middle East (UAE, Qatar). Programs include MS in CS, MBA, MBBS, Hospitality, Fashion, Music, Sports, Architecture & Offbeat fields.">
+  <meta name="keywords" content="study in Europe, study in USA, study in Canada, study in UAE, offbeat study abroad programs, MBBS abroad, hotel management abroad, fashion design abroad, sports management courses, game design courses abroad, architecture degree abroad, Middle East education, Germany study programs">
+  <meta name="author" content="Zhev Education Consultancy" />
 
+  <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Top Study Destinations – Zhev Education">
-  <meta property="og:description" content="Compare study in USA, Canada, UK, Ireland and Australia. Program highlights, work visas, and scholarship options.">
+  <meta property="og:description" content="Study in USA, Canada, UK, Europe and Middle East with guidance for traditional and offbeat programs.">
   <meta property="og:url" content="https://zheveducation.com/countries.html">
   <meta property="og:image" content="https://contactus328-ai.github.io/zheveducation/assets/og-image.png">
 
+  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Top Study Destinations – Zhev Education">
-  <meta name="twitter:description" content="Guidance for international students on country specific intakes, visa pathways and top universities.">
+  <meta name="twitter:title" content="Top Study Destinations – Zhev Education Abroad Consultancy">
+  <meta name="twitter:description" content="Explore USA, Europe, Canada, UK, Australia and Middle East for traditional & offbeat courses like fashion, music, hotel management & MBBS.">
+  <meta name="twitter:image" content="https://contactus328-ai.github.io/zheveducation/assets/og-image.png">
 
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="assets/style.css" />
-  <title>Countries We Serve</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="assets/style.css">
+
 </head>
+
 <body>
-  <header>
-    <h1>Countries We Serve</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="services.html">Services</a>
-      <a href="countries.html">Countries</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
 
-  <section>
-    <h2>Study in USA</h2>
-    <p>
-      The USA is a top destination for MS in Computer Science, Data Science and STEM programs with leading
-      universities like MIT, Stanford, CMU and many public research institutions. Our services for Study in USA
-      include university shortlisting, GRE/TOEFL/IELTS strategy, SOP & LOR preparation, scholarship searches,
-      and F1 visa preparation. We advise on STEM OPT opportunities and long-term career planning.
-    </p>
+<header>
+  <h1>Countries We Serve</h1>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="services.html">Services</a>
+    <a href="countries.html">Countries</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
 
-    <h2>Study in Canada</h2>
-    <p>
-      Canada offers strong PGWP pathways, affordable fees and growing tech hubs. We help students apply to
-      top Canadian universities and colleges, prepare for study permits, and optimise applications for
-      scholarship and PR pathways. Data Science and MS in CS are highly popular among Indian students.
-    </p>
+<section>
+  <h2>Study in USA</h2>
+  <p>
+    The USA remains the top choice for STEM programs such as MS in Computer Science, Data Science, 
+    Cybersecurity, MBA, Engineering, Healthcare and even creative fields like Film, Music, Game Design, 
+    Fashion and Sports Management. With globally ranked universities, strong internship culture and 
+    OPT work visas, it provides excellent employment pathways.
+  </p>
 
-    <h2>Study in UK & Ireland</h2>
-    <p>
-      The UK has one-year Masters options and diverse scholarship opportunities. Ireland is a growing hub
-      for tech talent with strong industry links. We provide targeted lists for one-year MSc programs,
-      guidance on the Graduate Route (UK) and PSW options (Ireland), and interview/visa coaching.
-    </p>
+  <h2>Study in Canada</h2>
+  <p>
+    Canada offers career-focused education, PGWP work permits, PR pathways and a large international 
+    student community. Popular programs include MS in CS, Data Analytics, Nursing, Hospitality, Culinary Arts, 
+    Architecture, Sports Science and Business. Many universities offer affordable tuition and co-op options.
+  </p>
 
-    <h2>Study in Australia & New Zealand</h2>
-    <p>
-      Australia and New Zealand provide quality programs with clear post-study work options. We guide
-      students through intake choices, visa rules, recognition of credentials, and on-campus support.
-    </p>
-  </section>
+  <h2>Study in UK & Ireland</h2>
+  <p>
+    The UK is known for 1-year Master's programs in management, engineering, fashion, design, sports, architecture 
+    and hospitality. Ireland is a booming tech hub with strong demand for CS, AI/ML, Data, Cybersecurity, Cloud 
+    Computing, Pharmaceuticals and Healthcare programs. Both countries offer post-study work visas.
+  </p>
 
-  <section>
-    <h2>How We Help You Choose</h2>
-    <p>
-      We evaluate your academic profile, budget, career goals and scholarship eligibility. For technical
-      programs like MS in CS or Data Science, we recommend universities with strong research labs and
-      internship pipelines. For management programs, our counsellors focus on placements and ROI.
-    </p>
-  </section>
+  <h2>Study in Australia & New Zealand</h2>
+  <p>
+    Popular for programs in Nursing, Hospitality, Architecture, Construction, Marine Science, Sports Science, 
+    Fitness Training, MBBS pathways, Aviation, Business and Information Technology. Universities offer strong 
+    PR-friendly pathways and hands-on training.
+  </p>
 
-  <section>
-    <h2>Testimonials</h2>
-    <div class="grid">
-      <div class="card">
-        <strong>Priya K.</strong>
-        <p>"Great insights on country choice and visa guidance — helped me pick the right university."</p>
-      </div>
-      <div class="card">
-        <strong>Rahul D.</strong>
-        <p>"Practical advice on scholarships and living costs made planning simple."</p>
-      </div>
-      <div class="card">
-        <strong>Simran B.</strong>
-        <p>"Excellent counselling for MS in Data Science choices."</p>
-      </div>
+  <h2>Study in Europe (Germany, France, Italy, Netherlands, Spain, Sweden, Finland)</h2>
+  <p>
+    Europe is a top destination for high-quality, low-cost education. Germany offers low or zero tuition fees, 
+    especially for Engineering, Robotics, Automotive, AI, Architecture and IT. France is strong for Fashion, 
+    Luxury Management, Culinary Arts and Hospitality. Italy is known for Design, Architecture, Fine Arts and 
+    Music. The Netherlands, Sweden and Finland offer globally ranked programs in Gaming, Psychology, Sports, 
+    Life Sciences, Renewable Energy and Engineering.
+  </p>
+
+  <h2>Study in the Middle East (UAE, Qatar, Saudi Arabia)</h2>
+  <p>
+    The Middle East is emerging as a premium, affordable education destination. Popular programs include 
+    Hotel Management, Aviation, Business, Sports Management, Medical Allied Courses, Fashion Styling, 
+    Hair & Beauty Therapy, Event Management, Digital Marketing and Game Design. UAE is especially known 
+    for hospitality, tourism, aviation and IT programs with strong internship opportunities.
+  </p>
+</section>
+
+<section>
+  <h2>Popular Offbeat Programs Abroad</h2>
+  <ul>
+    <li>Hotel Management & Hospitality</li>
+    <li>Fashion Design & Styling</li>
+    <li>Music, Sound & Audio Engineering</li>
+    <li>Sports Science, Physiotherapy & Fitness Training</li>
+    <li>Game Design, Animation & VFX</li>
+    <li>Culinary Arts & Baking</li>
+    <li>Hair & Beauty / Cosmetology</li>
+    <li>Architecture & Interior Design</li>
+    <li>Dentistry, MBBS & Allied Health Sciences</li>
+    <li>Photography, Film & Media Studies</li>
+    <li>Marine Science & Aviation</li>
+    <li>Luxury Brand Management</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Testimonials</h2>
+  <div class="grid">
+    <div class="card">
+      <strong>Priya K.</strong>
+      <p>"Great clarity on choosing the right country. I chose Ireland for Data Science and it was the best decision."</p>
     </div>
-  </section>
+    <div class="card">
+      <strong>Rahul D.</strong>
+      <p>"Their guidance for hotel management programs in Europe was very detailed and helpful."</p>
+    </div>
+    <div class="card">
+      <strong>Simran B.</strong>
+      <p>"I received the best advice for studying fashion design in Italy. Thank you Zhev!"</p>
+    </div>
+  </div>
+</section>
 
-  <footer>
-    <p>© 2025 Zhev Education Abroad Consultancy</p>
-  </footer>
+<footer>
+  <p>© 2025 Zhev Education Abroad Consultancy</p>
+</footer>
+
 </body>
 </html>
