--- a/contact.html
+++ b/contact.html
@@ -1,81 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="canonical" href="https://zheveducation.com/contact.html">
-  <meta name="google-site-verification" content="UDWz14iODOz9mqHBeFAhVdkxtOlqV3TghXXDoQKZwv4" />
 
-  <title>Contact Zhev Education – Study Abroad Consultancy India</title>
-  <meta name="description" content="Contact Zhev Education for study abroad counselling, admissions support, visa guidance, SOP/LOR help and scholarship research for USA, UK, Canada and Australia.">
-  <meta name="keywords" content="contact Zhev Education, study abroad help, education consultancy contact, student visa help, apply for study abroad, SOP writing service">
+  <!-- JSON-LD Structured Data for Contact Page -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": ["ContactPage", "EducationalOrganization", "LocalBusiness"],
+    "name": "Zhev Education Abroad Consultancy",
+    "url": "https://zheveducation.com/contact.html",
+    "description": "Contact Zhev Education for study abroad guidance, admissions support, visa filing, SOP/LOR drafting and counselling for USA, UK, Canada, Australia, Ireland and Europe.",
+    "telephone": "+91-9967200345",
+    "email": "info@zheveducation.com",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Mumbai",
+      "addressLocality": "Mumbai",
+      "addressRegion": "Maharashtra",
+      "postalCode": "400074",
+      "addressCountry": "IN"
+    },
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "telephone": "+91-9967200345",
+      "email": "info@zheveducation.com",
+      "contactType": "customer service",
+      "areaServed": "IN"
+    },
+    "sameAs": [
+      "https://www.facebook.com/",
+      "https://www.instagram.com/",
+      "https://www.linkedin.com/"
+    ],
+    "review": [
+      {
+        "@type": "Review",
+        "author": "Anjali T",
+        "reviewBody": "Quick response and clear guidance. They helped me shortlist the perfect universities.",
+        "reviewRating": { "@type": "Rating", "ratingValue": "5" }
+      },
+      {
+        "@type": "Review",
+        "author": "Karan M",
+        "reviewBody": "Very supportive and transparent. They helped with my application and visa end-to-end.",
+        "reviewRating": { "@type": "Rating", "ratingValue": "5" }
+      },
+      {
+        "@type": "Review",
+        "author": "Riya S",
+        "reviewBody": "Amazing scholarship guidance. The team follows up well and is very professional.",
+        "reviewRating": { "@type": "Rating", "ratingValue": "5" }
+      }
+    ]
+  }
+  </script>
+
+  <link rel="canonical" href="https://zheveducation.com/contact.html">
+  <meta name="google-site-verification" content="UDWz14iODOz9mqHBeFAhVdkxtOlqV3TghXXDoQKZwv4">
+
+  <!-- SEO Meta Tags -->
+  <title>Contact Zhev Education – Study Abroad Consultants India</title>
+  <meta name="description" content="Contact Zhev Education for study abroad counselling, university admissions, SOP/LOR writing, visa assistance and scholarship guidance for USA, Canada, UK, Europe and Australia.">
+  <meta name="keywords" content="contact Zhev Education, study abroad consultants contact, speak to study abroad expert, education consultancy India, visa assistance, SOP help, abroad admissions support">
   <meta name="author" content="Zhev Education Consultancy">
 
+  <!-- Open Graph -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Contact Zhev Education – Study Abroad Consultancy">
-  <meta property="og:description" content="Get in touch for personalised study abroad counselling for USA, UK, Canada and Australia.">
+  <meta property="og:title" content="Contact Zhev Education – Study Abroad Consultancy India">
+  <meta property="og:description" content="Get in touch for personalised study abroad counselling and end-to-end admissions support.">
   <meta property="og:url" content="https://zheveducation.com/contact.html">
   <meta property="og:image" content="https://contactus328-ai.github.io/zheveducation/assets/og-image.png">
 
+  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Contact Zhev Education – Study Abroad Consultancy">
-  <meta name="twitter:description" content="Reach out for application, visa and scholarship support for higher education abroad.">
+  <meta name="twitter:description" content="Reach out for admissions, applications, visas and scholarship support.">
+  <meta name="twitter:image" content="https://contactus328-ai.github.io/zheveducation/assets/og-image.png">
 
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="assets/style.css" />
-  <title>Contact Us</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="assets/style.css">
 </head>
+
 <body>
-  <header>
-    <h1>Contact Us</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="services.html">Services</a>
-      <a href="countries.html">Countries</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
 
-  <section>
-    <h2>Get in Touch</h2>
-    <p>
-      We'd love to speak with you about study abroad options. Whether you're looking for MS in Computer Science,
-      MBA options, Data Science masters or healthcare programs, our counsellors can provide a free initial consultation.
-      Contact us to schedule a one-on-one call, request a personalised university shortlist, or get help with SOP and visa filing.
-    </p>
+<header>
+  <h1>Contact Us</h1>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="services.html">Services</a>
+    <a href="countries.html">Countries</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
 
-    <h3>Contact Details</h3>
-    <p>Email: <a href="mailto:info@zheveducation.com">info@zheveducation.com</a></p>
-    <p>Phone: +91 99672 00345</p>
-    <p>Address: Mumbai, Maharashtra, India</p>
+<section>
+  <h2>Get in Touch With Us</h2>
+  <p>
+    Whether you're planning to study in the USA, Canada, UK, Ireland, Australia, Europe or the Middle East, 
+    Zhev Education provides complete support for your international education journey.  
+    Reach out to us for personalised counselling, university shortlisting, SOP/LOR drafting, 
+    scholarships and visa assistance.
+  </p>
+  <p>
+    Our experts respond quickly and provide accurate guidance based on your background, budget, preferred 
+    course and destination. We help with programs such as MS in Computer Science, Data Science, MBA, Nursing, 
+    Hospitality, Architecture, Culinary Arts, Fashion Design, MBBS, Aviation, Sports, Game Design and many more.
+  </p>
+</section>
 
-    <h3>Request a Callback</h3>
-    <p>
-      Fill out a short form (or email us) with your course of interest, desired country, current qualifications,
-      and preferred start date. We will return a detailed plan and next steps within 48 hours.
-    </p>
-  </section>
+<section>
+  <h2>Contact Details</h2>
+  <p><strong>Email:</strong> <a href="mailto:info@zheveducation.com">info@zheveducation.com</a></p>
+  <p><strong>Phone:</strong> +91 99672 00345</p>
+  <p><strong>Location:</strong> Mumbai, Maharashtra, India</p>
+</section>
 
-  <section>
-    <h2>Testimonials</h2>
-    <div class="grid">
-      <div class="card">
-        <strong>Anjali T.</strong>
-        <p>"Quick response and clear plan — helped me apply to top universities."</p>
-      </div>
-      <div class="card">
-        <strong>Karan M.</strong>
-        <p>"Professional and transparent process from shortlisting to visa."</p>
-      </div>
-      <div class="card">
-        <strong>Riya S.</strong>
-        <p>"Excellent follow up and scholarship guidance."</p>
-      </div>
+<section>
+  <h2>Request a Callback</h2>
+  <p>
+    To receive a personalised study abroad plan, send us the following details:
+  </p>
+  <ul>
+    <li>Course of interest (e.g., MS in CS, MBA, Nursing, Fashion, Game Design, MBBS, etc.)</li>
+    <li>Preferred countries (USA, Canada, Europe, Australia, UAE, etc.)</li>
+    <li>Your academic background (12th / bachelor's / work experience)</li>
+    <li>Budget range & scholarship requirements</li>
+    <li>Intended intake month/year</li>
+  </ul>
+  <p>
+    Email your details to <strong>info@zheveducation.com</strong> or message us on WhatsApp for quick assistance.
+  </p>
+</section>
+
+<section>
+  <h2>Testimonials</h2>
+  <div class="grid">
+    <div class="card">
+      <strong>Anjali T.</strong>
+      <p>"Quick response and clear plan — helped me apply to top universities abroad."</p>
     </div>
-  </section>
+    <div class="card">
+      <strong>Karan M.</strong>
+      <p>"Very supportive team. They guided me through the visa process step-by-step."</p>
+    </div>
+    <div class="card">
+      <strong>Riya S.</strong>
+      <p>"Amazing scholarship guidance and proper assistance throughout the application."</p>
+    </div>
+  </div>
+</section>
 
-  <footer>
-    <p>© 2025 Zhev Education Abroad Consultancy</p>
-  </footer>
+<footer>
+  <p>© 2025 Zhev Education Abroad Consultancy</p>
+</footer>
+
 </body>
 </html>
