--- a/index.html
+++ b/index.html
@@ -1,130 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <!-- JSON-LD structured data (must be inside <head>) -->
+
+  <!-- JSON-LD Structured Data -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "EducationalOrganization",
     "name": "Zhev Education Abroad Consultancy",
     "url": "https://zheveducation.com",
-    "logo": "https://contactus328-ai.github.io/zheveducation/assets/og-image.png",
-    "description": "Zhev Education helps students study abroad in USA, UK, Canada, Ireland, Australia & New Zealand with services including university shortlisting, SOP/LOR drafting, application filing, and visa guidance.",
+    "logo": "assets/logo.png",
+    "description": "Zhev Education helps students study abroad in USA, UK, Canada, Ireland, Australia & New Zealand with admissions, SOP/LOR drafting, university shortlisting and visa guidance.",
     "email": "info@zheveducation.com",
-    "telephone": "+91-9594538979",
+    "telephone": "+91-9967200345",
     "address": {
       "@type": "PostalAddress",
       "addressLocality": "Mumbai",
       "addressRegion": "Maharashtra",
       "addressCountry": "IN"
-    },
-    "sameAs": [
-      "https://www.facebook.com/",
-      "https://www.instagram.com/",
-      "https://www.linkedin.com/"
-    ],
-    "serviceArea": {
-      "@type": "Country",
-      "name": "India"
-    },
-    "knowsAbout": [
-      "Study Abroad",
-      "Study in USA",
-      "Study in UK",
-      "Study in Canada",
-      "Study in Ireland",
-      "Study in Australia",
-      "MS in Computer Science",
-      "MBA Abroad",
-      "Data Science Courses Abroad",
-      "Student Visa Assistance",
-      "SOP Writing",
-      "LOR Writing"
-    ],
-    "makesOffer": [
-      {
-        "@type": "Offer",
-        "name": "University Shortlisting",
-        "description": "Personalised university recommendations for USA, UK, Canada, Ireland, Australia."
-      },
-      {
-        "@type": "Offer",
-        "name": "SOP & LOR Drafting",
-        "description": "Professional writing and editing for SOPs, LORs and student resumes."
-      },
-      {
-        "@type": "Offer",
-        "name": "Visa Assistance",
-        "description": "Guidance on student visa filing, documentation and interview preparation."
-      },
-      {
-        "@type": "Offer",
-        "name": "Application Filing",
-        "description": "Full support for submitting applications to top universities."
-      }
-    ],
-    "review": [
-      {
-        "@type": "Review",
-        "author": "Rohit K",
-        "reviewBody": "Zhev Education helped me get admitted to three top MS in CS programs.",
-        "reviewRating": {
-          "@type": "Rating",
-          "ratingValue": "5"
-        }
-      },
-      {
-        "@type": "Review",
-        "author": "Pooja M",
-        "reviewBody": "Professional team. Great SOP and visa support.",
-        "reviewRating": {
-          "@type": "Rating",
-          "ratingValue": "5"
-        }
-      },
-      {
-        "@type": "Review",
-        "author": "Arjun S",
-        "reviewBody": "Excellent data science guidance and scholarship support.",
-        "reviewRating": {
-          "@type": "Rating",
-          "ratingValue": "5"
-        }
-      }
-    ]
+    }
   }
   </script>
 
+  <!-- Canonical -->
   <link rel="canonical" href="https://zheveducation.com/">
   <meta name="google-site-verification" content="UDWz14iODOz9mqHBeFAhVdkxtOlqV3TghXXDoQKZwv4" />
 
-  <!-- Primary SEO Meta Tags -->
-  <title>Zhev Education Abroad – Study Abroad Consultancy India | Study in USA, UK, Canada</title>
-  <meta name="description" content="Zhev Education helps students study abroad in USA, UK, Canada, Ireland, Australia & New Zealand. Admissions, visas, SOP/LOR drafting, university shortlisting, and career pathways.">
-  <meta name="keywords" content="study abroad, study in USA, study in UK, study in Canada, MS in CS, study computer science abroad, best universities for computer science in USA, study abroad consultants in India, student visa consultancy, study abroad scholarships">
+  <!-- SEO Meta Tags -->
+  <title>Zhev Education Abroad – Study Abroad Consultancy India</title>
+  <meta name="description" content="Zhev Education helps students study abroad in USA, UK, Canada, Ireland, Australia & New Zealand. Admissions, visas, university shortlisting, SOP/LOR drafting, scholarships and full application support.">
+  <meta name="keywords" content="study abroad, study in USA, study in UK, study in Canada, MS in CS abroad, best universities abroad, study abroad consultants in Mumbai, visa help, SOP writing, LOR drafting">
   <meta name="author" content="Zhev Education Consultancy">
 
-  <!-- Open Graph / Facebook -->
+  <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Zhev Education Abroad – Study Abroad Consultancy India">
-  <meta property="og:description" content="Your trusted partner for admissions, visas, SOP/LOR and university shortlisting for USA, UK, Canada, Ireland, Australia.">
+  <meta property="og:description" content="Your trusted partner for admissions, visas, SOP/LOR and university selection.">
+  <meta property="og:image" content="assets/logo.png">
   <meta property="og:url" content="https://zheveducation.com/">
-  <meta property="og:image" content="https://contactus328-ai.github.io/zheveducation/assets/og-image.png">
 
-  <!-- Twitter -->
+  <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Zhev Education Abroad – Study Abroad Consultancy India">
-  <meta name="twitter:description" content="Trusted study abroad consultancy offering admissions, visas, and university guidance.">
-  <meta name="twitter:image" content="https://contactus328-ai.github.io/zheveducation/assets/og-image.png">
+  <meta name="twitter:title" content="Zhev Education Abroad – Trusted Study Abroad Consultants">
+  <meta name="twitter:description" content="Apply to USA, UK, Canada, Ireland & Australia with expert guidance.">
+  <meta name="twitter:image" content="assets/logo.png">
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="assets/style.css" />
+
+  <link rel="stylesheet" href="assets/style.css">
+
+  <style>
+    /* Updated lighter professional theme */
+    header {
+      background: #2F3A56; /* Premium charcoal navy */
+      padding: 15px;
+      color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    .logo {
+      height: 60px;
+      width: auto;
+    }
+
+    header nav a {
+      color: #fff;
+      text-decoration: none;
+      margin-left: 20px;
+      font-weight: 500;
+    }
+
+    /* Hamburger menu */
+    .hamburger {
+      display: none;
+      font-size: 30px;
+      cursor: pointer;
+      color: white;
+    }
+
+    @media (max-width: 768px) {
+      header {
+        flex-direction: row;
+      }
+
+      nav {
+        display: none;
+        width: 100%;
+        background: #2F3A56;
+        padding: 10px;
+      }
+
+      nav a {
+        display: block;
+        margin: 10px 0;
+      }
+
+      .hamburger {
+        display: block;
+      }
+    }
+  </style>
+
+  <script>
+    function toggleMenu() {
+      var nav = document.getElementById("mobileNav");
+      nav.style.display = nav.style.display === "block" ? "none" : "block";
+    }
+  </script>
+
 </head>
+
 <body>
+
+  <!-- HEADER WITH LOGO -->
   <header>
-    <h1>Zhev Education Abroad Consultancy</h1>
-    <nav>
+    <img src="assets/logo.png" alt="Zhev Education Logo" class="logo">
+
+    <span class="hamburger" onclick="toggleMenu()">☰</span>
+
+    <nav id="mobileNav">
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="services.html">Services</a>
@@ -133,67 +131,46 @@
     </nav>
   </header>
 
-  <section class="hero">
+  <!-- HERO SECTION -->
+  <section class="hero" style="background:#F5F7FC; padding:50px; text-align:center;">
     <h2>Study Abroad With Confidence</h2>
-    <p>
-      Zhev Education is a full-service international education consultancy based in India helping students
-      apply to top universities for undergraduate and graduate study. Whether you want to study computer
-      science in the USA, pursue an MBA in the UK, or explore MS in Data Science in Canada, our team
-      provides university shortlisting, application filing, SOP & LOR drafting, visa guidance, and
-      pre-departure support. We specialise in helping Indian students secure admissions and scholarships
-      at reputed institutions and navigate post-study work visa pathways.
-    </p>
-    <a href="services.html" class="btn">Explore Services</a>
+    <p>Your trusted partner for global admissions, visas, SOP/LOR drafting, and university shortlisting.</p>
+    <a href="services.html" class="btn" style="background:#2F3A56; color:white; padding:10px 20px; border-radius:5px; text-decoration:none;">Explore Services</a>
   </section>
 
-  <section>
+  <!-- ABOUT SECTION -->
+  <section style="padding:20px;">
     <h2>What We Do</h2>
     <p>
-      We provide personalised counselling, accurate eligibility assessments for MS in CS, MBA and other
-      programs, and tailored university lists for the USA, UK, Canada, Ireland, Australia and New Zealand.
-      Our service covers application strategy, SOP writing, LOR coordination, resume polish, scholarships
-      research, education loan assistance, and visa interview prep. We focus on evidence-based guidance,
-      up-to-date admission criteria, and practical timelines so your application has the best chance.
-    </p>
-
-    <h3>Why students pick Zhev Education</h3>
-    <ul>
-      <li>Targeted shortlists for top ranked CS and engineering programs</li>
-      <li>Experienced SOP & LOR authors tuned to program intent</li>
-      <li>Visa filing & interview preparation with high success rates</li>
-      <li>Assistance with scholarships, loans and pre-departure logistics</li>
-    </ul>
-  </section>
-
-  <section>
-    <h2>Top Destinations & Programs</h2>
-    <p>
-      Popular choices include Study in USA (MS in CS, Data Science), Study in Canada (PGWP pathways),
-      Study in UK (1-year Masters), Study in Ireland (good STEM outcomes), and Study in Australia
-      (work visas). We also guide students to affordable and high-value options in Europe and New Zealand.
+      Zhev Education provides personalized study-abroad guidance for destinations including the USA, UK, Canada, Ireland, Australia,
+      New Zealand, Europe and UAE. Our services include university shortlisting, SOP/LOR drafting, scholarship guidance,
+      application filing, visa interview preparation and pre-departure support.
     </p>
   </section>
 
-  <section>
+  <!-- TESTIMONIALS SECTION -->
+  <section style="padding:20px;">
     <h2>Testimonials</h2>
     <div class="grid">
       <div class="card">
-        <strong>Rohit K., MS in CS (USA)</strong>
-        <p>"Zhev Education helped me shortlist universities and rewrite my SOP — I got into three top programs. Highly recommended."</p>
+        <strong>Rohit K – MS in CS (USA)</strong>
+        <p>"Zhev Education helped me shortlist universities and rewrite my SOP — got 3 admits!"</p>
       </div>
       <div class="card">
-        <strong>Pooja M., MBA (UK)</strong>
-        <p>"Professional guidance on applications and visa preparation. The team was supportive throughout."</p>
+        <strong>Pooja M – MBA (UK)</strong>
+        <p>"Professional guidance on applications and visa preparation."</p>
       </div>
       <div class="card">
-        <strong>Arjun S., MS Data Science (Canada)</strong>
-        <p>"Excellent counselling and scholarship advice — saved me significant fees."</p>
+        <strong>Arjun S – MS Data Science (Canada)</strong>
+        <p>"Excellent counselling and scholarship advice."</p>
       </div>
     </div>
   </section>
 
-  <footer>
-    <p>© 2025 Zhev Education Abroad Consultancy — Email: info@zheveducation.com • Phone: +91 99672 00345</p>
+  <!-- FOOTER -->
+  <footer style="background:#2F3A56; text-align:center; color:white; padding:12px;">
+    © 2025 Zhev Education Abroad Consultancy — info@zheveducation.com • +91 99672 00345
   </footer>
+
 </body>
 </html>
